# xuscript

./: .gitignore  Cargo.toml  GOLDEN维护指南.md  README.md  REVIEW_REPORT.md  perf_results.txt  perf_results_scale50000.txt  test_all.sh  test_enum_with_does.xu  test_gc_basic.xu  test_gc_simple.xu
bench/: run_bench.py  (+3 more)
crates/xu_cli/: Cargo.toml  README.md
crates/xu_cli/src/: args.rs  main.rs
crates/xu_cli/src/commands/: ast.rs  check.rs  common.rs  mod.rs  run.rs  tokens.rs
crates/xu_cli/tests/: cycle_import.rs  m5_cli_regression.rs  static_diags.rs  strict_mode.rs  v1_1_check_regression.rs
crates/xu_lexer/: Cargo.toml  README.md
crates/xu_lexer/src/: keywords.rs  lexer.rs  lib.rs  normalize.rs
crates/xu_lexer/tests/: fuzz_proptest.rs  lex_smoke.rs  punct_rules.rs
crates/xu_parser/: Cargo.toml  README.md
crates/xu_parser/src/: expr.rs  interp.rs  lib.rs  mangling.rs  parser.rs  stmt.rs  types.rs  utils.rs
crates/xu_parser/src/parser/: expr.rs  interp.rs  mod.rs  stmt.rs
crates/xu_parser/tests/: enum_ctor_args.rs  fuzz_proptest.rs  golden_snapshots.rs  import_sugar.rs  interpolation.rs  no_panic_fuzz.rs  parse_examples.rs
crates/xu_parser/tests/inputs/: 01_basics.xu  02_control_flow.xu  08_error_mixed_punct.xu
crates/xu_runtime/: Cargo.toml  README.md
crates/xu_runtime/src/: args_eval.rs  builtins_registry.rs  diag.rs  env.rs  errors.rs  executor.rs  gc.rs  ir.rs  ir_throw.rs  lib.rs  modules.rs  op_dispatch.rs  runtime.rs  stmt_exec.rs  text.rs  value.rs
crates/xu_runtime/src/ast_exec/: access.rs  call.rs  closure.rs  expr.rs  mod.rs  stmt.rs
crates/xu_runtime/src/builtins/: collection.rs  common.rs  conversion.rs  core.rs  math.rs  system.rs
crates/xu_runtime/src/core/: env.rs  gc.rs  generational_heap.rs  heap.rs  mod.rs  slot_allocator.rs  text.rs  value.rs
crates/xu_runtime/src/executor/: access.rs  call.rs
crates/xu_runtime/tests/: README.md  allowed_roots.rs  builtins_builder_check.rs  builtins_consistency.rs  driver_bytecode.rs  gc_cache_safety.rs  idempotent_exec.rs  import_parse_cache.rs  imports.rs  mock_caps.rs  perf_benchmarks.rs  perf_lexer_parser.rs  perf_runtime_exec.rs  perf_vm_long_interpolation.rs  perf_vm_vs_ast.rs  perf_vm_vs_ast_foreach.rs  runner.rs  stdlib_and_interpolation.rs  strict_mode.rs  strict_vars.rs  text_indexing.rs  text_properties.proptest-regressions  text_properties.rs  vm_ir.rs  vm_program_exec.rs
(+827 files in other folders)
